persistence/ceph/rook/prometheus/prometheus-svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus-ns
  labels:
    app: prometheus
spec:
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: prometheus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus-ns
  labels:
    app: prometheus
spec:
  ingressClassName: 'nginx'
  rules:
  - host: prometheusui.shixiaochuang.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
